# gradle-javacpp

./: .gitignore
samples/hl-demo/: build.gradle  cl.bat  settings.gradle
samples/hl-demo/hl-demo-cpp/: .clang-format  .gitignore  CMakeLists.txt
samples/hl-demo/hl-demo-cpp/src/: demo.cpp  hl-config.h  hl-util.cpp  hl.cpp  hl.h  lcc.h  lcc_demo.cpp  rsa_demo.cpp  rsaes-oaep-demo.cpp  rsaes-oaep-sha256-string.cpp  rsaes-oaep-sha256.cpp  sha1.cpp
samples/hl-demo/hl-demo-cpp/src/include/: datatypes.h  licensecc.cpp  licensecc.h  public_key.h
samples/hl-demo/src/main/java/org/amtf/hldemo/presets/: hldemo.java
samples/hl-demo/src/test/java/org/amtf/hldemo/: UnitTest.java
samples/zlib/: build.gradle  build.sh  readme.md  settings.gradle
samples/zlib/src/test/java/org/bytedeco/zlib/: UnitTest.java
src/main/java/org/bytedeco/gradle/javacpp/: BuildTask.java
